packages/webassemblyjs/test/fixtures/conversions/type-errors/reinterpret-f32-i32/module.wast
(module (func (result f32) (f32.reinterpret/i32 (i64.const 0))))
